Configuración del patraon en calidades de gas
