# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\api\CustomerController;
 use App\Http\Controllers\api\SupplierController;
+use App\Repositories\QualityRepository;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -11,3 +12,4 @@ Route::get('/user', function (Request $request) {
 
 Route::apiResource('/customers', CustomerController::class);
 Route::apiResource('/suppliers', SupplierController::class);
+Route::apiResource('/qualities', QualityRepository::class);
